# budget-router-openenv

./: .dockerignore  .gitignore  .openenvignore  Dockerfile  README.md  README_archived.md  README_v1.md  REPRODUCIBILITY.md  app_gradio.py  baseline_results.json  baseline_results_heldout.json  blog.md  check_leak.py  client.py  eval_sft.py  generate_sft_data.py  gradio-vs-nextjs-ui.md  inference.py  models.py  open code chatgpt  5.4 deep research.md  openenv.yaml  pyproject.toml  test_docker.sh  train_sft.py  ui.md  validation_task1_output.txt  visualize.py
.cursor/: BUGBOT.md
budget_router/: __init__.py  client.py  environment.py  models.py  policies.py  reward.py  tasks.py  validation.py
docs/: STRATEGIC_BRIEF.md  budget_router_submission_blog.md
eval/: eval_all.py  eval_all.sh  trace_episode.py
gradio_ui/: config.py  legacy_api.py  policies.py  renderers.py  state.py  theme.py
outputs/: eval_ppo_hard_multi_20260408.txt  eval_results_20260408_103950.json  eval_results_20260408_105938.json  eval_results_20260424_200102.json  eval_results_20260424_201654.json  eval_results_20260424_201736.json  eval_results_20260424_204919.json  eval_results_20260424_205300.json  eval_results_20260424_212358.json  eval_results_20260424_214229.json  eval_results_20260424_215216.json  eval_results_20260424_215221.json  eval_results_20260424_215420.json  eval_results_20260425_143356.json  eval_results_20260425_143711.json  eval_results_20260425_144313.json  eval_results_20260425_151917.json  eval_results_20260425_152953.json  eval_summary_20260408_103950.md  eval_summary_20260408_105938.md  eval_summary_20260424_200102.md  eval_summary_20260424_201654.md  eval_summary_20260424_201736.md  eval_summary_20260424_204919.md  eval_summary_20260424_205300.md  eval_summary_20260424_212358.md  eval_summary_20260424_214229.md  eval_summary_20260424_215216.md  eval_summary_20260424_215221.md  eval_summary_20260424_215420.md  eval_summary_20260425_143356.md  eval_summary_20260425_143711.md  eval_summary_20260425_144313.md  eval_summary_20260425_151917.md  eval_summary_20260425_152953.md  ppo_hard_multi_eval.json  ppo_hard_multi_heldout_100_109.json  sft_dataset.jsonl  (+3 more)
(+48 files in other folders)
