[project]
name = "budget-router"
version = "0.1.0"
description = "Incident Commander for Budgeted Tool/API Reliability — OpenEnv RL Environment"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Akshay Babbar" },
    { name = "Harshit Babbar" },
]
dependencies = [
    "fastapi>=0.110,<1.0",
    "gradio>=4.0,<5.0",
    "pydantic>=2.0,<3.0",
    "openenv-core>=0.1.0",
    "openai>=1.0,<2.0",
    "requests>=2.31,<3.0",
    "starlette<1.0",
    "typer>=0.12,<1.0",
    "uvicorn>=0.30,<1.0",
    "jmespath>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
training = [
    "gymnasium>=1.0.0,<2.0",
    "stable-baselines3>=2.0,<3.0",
]
grpo = [
    "torch>=2.1.0",
    "transformers>=5.3.0",
    "huggingface_hub>=1.5.0",
    "trl>=0.15.0",
    "peft>=0.10.0",
    "accelerate>=0.30.0",
    "datasets>=2.18.0",
    "bitsandbytes>=0.43.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["budget_router/tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "python-docx>=1.2.0",
]

